argocd/base/bot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analyze-bot
spec:
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: analyze-bot
  replicas: 1
  template:
    metadata:
      labels:
        app: analyze-bot
    spec:
      containers:
        - name: analyze-bot
          image: registry.uniproject.jp/official/analyze-bot:0.3.0
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 500m # 必要最低限の0.5CPUを確保
              memory: 1Gi # 必要最低限の1GiBを確保
            limits:
              cpu: "1"
              memory: 2Gi # 最大2GiBまで使用可能
      imagePullSecrets:
        - name: internal-harbor
