argocd/base/clickhouse-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clickhouse
  namespace: analyze-bot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clickhouse
  template:
    metadata:
      labels:
        app: clickhouse
    spec:
      containers:
        - name: clickhouse
          image: clickhouse/clickhouse-server:24.8
          ports:
            - containerPort: 8123
              name: http
            - containerPort: 9000
              name: tcp
          volumeMounts:
            - name: clickhouse-data
              mountPath: /var/lib/clickhouse
      volumes:
        - name: clickhouse-data
          persistentVolumeClaim:
            claimName: clickhouse-pvc
