argocd/base/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
spec:
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - image: mongo:8.0.0
          name: mongo
          volumeMounts:
            - mountPath: /data/configdb
              name: mongo-configdb
            - mountPath: /data/db
              name: mongo-db
      volumes:
        - persistentVolumeClaim:
            claimName: db-config
          name: mongo-configdb
        - persistentVolumeClaim:
            claimName: db-data
          name: mongo-db
