argocd/base/clickhouse-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clickhouse
  namespace: analyze-bot
  labels:
    app: clickhouse
spec:
  selector:
    app: clickhouse
  ports:
    - name: http
      port: 8123
      targetPort: 8123
      protocol: TCP
    - name: tcp
      port: 9000
      targetPort: 9000
      protocol: TCP
  type: ClusterIP
