argocd/base/hp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: analyze-bot-site
spec:
  selector:
    app: analyze-bot-site
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
